--- a/heliumEditor/Proxima.cabal
+++ b/heliumEditor/Proxima.cabal
@@ -39,28 +39,39 @@ Executable HeliumEditor
 -- do not edit below this line
 -------------------------------------------------------------------------------
 
-  build-depends: base >=4.0, haskell98 -any,
-                 syb <= 0.2,
+  build-depends: base >=4.0,
+                 -- haskell98 -any,
+                 -- syb <= 0.2,
+                 syb,
                  directory >=1.0 && <= 10.0.1.1,
-                 network >=2.0 && < 2.2.1.6,
-                 parsec ==2.1.0.1 && < 3.0.1,
-                 time >=1.0 && < 1.1.4,
-                 containers >=0.1 && < 0.3.0.0,
-                 array >=0.1 && < 0.3.0.0,
-                 xhtml >=2.0 && < 3000.2.0.1,
-                 mtl >=1.1 && < 1.1.0.2,
+                 -- network >=2.0 && < 2.2.1.6,
+                 network,
+                 -- parsec ==2.1.0.1 && < 3.0.1,
+                 parsec,
+                 -- time >=1.0 && < 1.1.4,
+                 time,
+                 -- containers >=0.1 && < 0.3.0.0,
+                 containers,
+                 -- array >=0.1 && < 0.3.0.0,
+                 array,
+                 -- xhtml >=2.0 && < 3000.2.0.1,
+                 xhtml,
+                 -- mtl >=1.1 && < 1.1.0.2,
+                 mtl,
                  old-time < 10.0.0.3,
-                 uulib < 0.9.10,
+                 -- uulib < 0.9.10,
+                 uulib,
                  ghc-prim,
                  old-locale < 10.0.0.2,
-                 bytestring < 0.9.1.5
+                 -- bytestring < 0.9.1.5
+                 bytestring
   if flag(Gtk)
 -- Supporting gtk version might be tricky because we will need to install old gtk2hs
 -- When trying this, fix suitable package upperbounds first
     build-depends: gtk >=0.9.11, cairo >= 0.9
   else
     build-depends: HAppS-State == 0.9.3,
-                   HAppS-Server == 0.9.3 
+                   HAppS-Server == 0.9.3
 --    build-depends: salvia == 0.0.5, stm -any, fclabels -any
     cpp-options: -DSERVER
 
