--- a/heliumEditor/Proxima.cabal
+++ b/heliumEditor/Proxima.cabal
@@ -28,7 +28,7 @@ extra-tmp-files:
 Executable HeliumEditor
   build-depends: directory >=1.0 && <= 10.0.1.1
 
-  hs-source-dirs: src 
+  hs-source-dirs: src
 -- needs to be here, because otherwise the Main from the helium source dirs is used.
 
 -- NOTE link with Helium compiler is currently disabled
@@ -90,6 +90,8 @@ Executable HeliumEditor
   hs-source-dirs: src/proxima/src src
   ghc-prof-options:
   ghc-options: -w -fglasgow-exts
+  -- ghc-options: -w
+  -- extensions: UndecidableInstances NoMonomorphismRestriction
   extensions: UndecidableInstances NoMonomorphismRestriction
   hugs-options:
   jhc-options:
