--- a/dazzleEditor/Proxima.cabal
+++ b/dazzleEditor/Proxima.cabal
@@ -10,15 +10,15 @@ stability: experimental
 homepage: http://www.cs.uu.nl/research/projects/proxima
 package-url:
 synopsis: Proxima is a generic presentation-oriented structure editor.
-description:
-category:
+-- description:
+-- category:
 tested-with: GHC -any
-data-files:
+-- data-files:
 extra-source-files: src/proxima/src/Arrangement/ArrangerAG.ag
                     src/proxima/src/Layout/AlexTemplate-ghc
                     src/proxima/src/Layout/ScannerAG.ag src/DocumentType.prx
                     src/PresentationAG.ag src/PresentationAG_Generated.ag
-extra-tmp-files:
+-- extra-tmp-files:
 
 
 -------------------------------------------------------------------------------
@@ -26,54 +26,54 @@ extra-tmp-files:
 -- (except for the name, author, etc. fields)
 
 Executable DazzleEditor
-  build-depends: 
+--   build-depends:
 
 -- do not edit below this line
 -------------------------------------------------------------------------------
 
-  build-depends: base >=4.0, haskell98 -any,
-                 syb <= 0.2,
-                 directory >=1.0 && <= 10.0.1.1,
-                 network >=2.0 && < 2.2.1.6,
-                 parsec ==2.1.0.1 && < 3.0.1,
-                 time >=1.0 && < 1.1.4,
-                 containers >=0.1 && < 0.3.0.0,
-                 array >=0.1 && < 0.3.0.0,
-                 xhtml >=2.0 && < 3000.2.0.1,
-                 mtl >=1.1 && < 1.1.0.2,
-                 old-time < 10.0.0.3,
-                 uulib < 0.9.10,
+  build-depends: base >=4.0,
+                 syb,
+                 directory,
+                 network,
+                 parsec,
+                 time,
+                 containers,
+                 array,
+                 xhtml,
+                 mtl,
+                 old-time,
+                 uulib,
                  ghc-prim,
-                 old-locale < 10.0.0.2,
-                 bytestring < 0.9.1.5
+                 old-locale,
+                 bytestring
   if flag(Gtk)
 -- Supporting gtk version might be tricky because we will need to install old gtk2hs
 -- When trying this, fix suitable package upperbounds first
     build-depends: gtk >=0.9.11, cairo >= 0.9
   else
     build-depends: HAppS-State == 0.9.3,
-                   HAppS-Server == 0.9.3 
+                   HAppS-Server == 0.9.3
 --    build-depends: salvia == 0.0.5, stm -any, fclabels -any
     cpp-options: -DSERVER
 
   main-is: Main.hs
   buildable: True
-  cc-options:
-  ld-options:
-  frameworks:
-  c-sources:
-  extensions:
-  extra-libraries:
-  extra-lib-dirs: .
-  includes:
-  install-includes:
-  include-dirs:
+  -- cc-options:
+  -- ld-options:
+  -- frameworks:
+  -- c-sources:
+  -- extensions:
+  -- extra-libraries:
+  -- extra-lib-dirs: .
+  -- includes:
+  -- install-includes:
+  -- include-dirs:
   hs-source-dirs: src/proxima/src src
-  ghc-prof-options:
+--  ghc-prof-options:
   ghc-options: -w -fglasgow-exts
   extensions: UndecidableInstances NoMonomorphismRestriction
-  hugs-options:
-  jhc-options:
+  -- hugs-options:
+  -- jhc-options:
 
 Flag Gtk
   Description: Compile Proxima as a server application with Gtk2Hs
