Attempt to compile minimalEditor, suspect it is too old

--- a/minimalEditor/Makefile
+++ b/minimalEditor/Makefile
@@ -1,7 +1,8 @@
 #HC = ghc
 #PROXIMADIR = ../proxima
 
-HC   = /c/Progra~1/Visual~1/bin/ghc
+#HC   = /c/Progra~1/Visual~1/bin/ghc
+HC   = ghc
 PROXIMADIR = src/proxima
 
 # use the latter one for a Visual Studio configuration (which cannot access dirs outside project dir)
@@ -13,8 +14,10 @@ PROXIMABINDIR = $(PROXIMADIR)/bin
 
 UUSRCDIR = ../uuagc/src
 
-AGC  = $(PROXIMABINDIR)/uuagc$(EXE)
-GEN  = $(PROXIMABINDIR)/generate$(EXE)
+#AGC  = $(PROXIMABINDIR)/uuagc$(EXE)
+#GEN  = $(PROXIMABINDIR)/generate$(EXE)
+AGC = uuagc
+GEN  = proxima-generator
 
 EXE            = .exe
 MAIN           = proxima$(EXE)
@@ -30,14 +33,15 @@ LAYOUTDIR       = $(PROXIMADIR)/src/Layout
 
 PROXIMADIRS = $(PROXIMASRCDIR)
 
-# Generation 
+# Generation
 
 generator:
 	cd $(PROXIMASRCDIR); make generator
 
 generate: src/DocTypes_Generated.hs
-	
-src/DocTypes_Generated.hs : src/DocumentType.prx $(GEN)
+
+# src/DocTypes_Generated.hs : src/DocumentType.prx $(GEN)
+src/DocTypes_Generated.hs : src/DocumentType.prx
 	cd $(PROXIMASRCDIR); make generator
 	$(GEN) src src/DocumentType.prx
 
@@ -46,21 +50,21 @@ src/DocTypes_Generated.hs : src/DocumentType.prx $(GEN)
 
 # target for only compiling presentationAG, useful when working with GHCi
 presenter: src/PresentationAG.hs
-	
+
 $(AGC):
 	cd $(PROXIMASRCDIR); make agc
 
 src/PresentationAG.hs: $(AGC) \
 	src/PresentationAG.ag \
 	src/PresentationAG_Generated.ag \
-	
+
 	@echo "Compiling presentationAG.ag"
 	@$(AGC) -o src/PresentationAG.hs -cfmspw --self --Wmax=12 --genlinepragmas --module=PresentationAG src/PresentationAG.ag -P src
 
 
 lexer: src/ScannerSheet.hs
 
-# the -t causes Alex to look for a template file. 
+# the -t causes Alex to look for a template file.
 src/ScannerSheet.hs: src/ScannerSheet.x $(LAYOUTDIR)/AlexTemplate-ghc
 	alex -t $(LAYOUTDIR) --ghc src/ScannerSheet.x
 
@@ -74,7 +78,7 @@ clean:
 
 # cannot delete *_Generated.hs sources, so we touch src/DocumentType.prx, causing them to be
 # recompiled on the next make
-	
+
 
 # also clean Proxima
 clean-proxima: clean
@@ -83,7 +87,7 @@ clean-proxima: clean
 # also clean uust
 clean-proxima-all: clean
 	cd $(PROXIMASRCDIR); make clean-all
-	
+
 #directories
 
 
@@ -97,7 +101,7 @@ HC_OPTS = -static -fglasgow-exts -fallow-overlapping-instances -fallow-undecidab
 
 proxima:
 	cd $(PROXIMASRCDIR); make
-	
+
 $(MAIN): proxima generate presenter lexer
 	$(HC) --make -o $(MAIN) src/Main.hs -i$(ALLSRCDIRS) $(HC_OPTS)
 
@@ -115,6 +119,6 @@ GHCOPTS = $(IMPORTS) --optghc=-fglasgow-exts \
   --optghc=-fno-monomorphism-restriction \
   --optghc=-w
 
-haddock: 
-	haddock -o doc -h -B $(GHC_LIB) -t $(TITLE) $(GHCOPTS) $(TARGET) 
+haddock:
+	haddock -o doc -h -B $(GHC_LIB) -t $(TITLE) $(GHCOPTS) $(TARGET)
 
